--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,10 +56,17 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  # ios: true
+  image_path: "assets/images/dumbbell.jpg"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -86,7 +93,6 @@ flutter:
     - assets\images\Calendar.jpg
     - assets\lottie\Animation - 1695630496886.json
     - assets\images\bck_of_some_screens.jpg
-    - assets\lottie\rat_run.json
     - assets\images\dumbbell.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
