--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 8.0.0+8
 
 environment:
   sdk: '>=3.1.1 <4.0.0'
@@ -49,13 +49,12 @@ dependencies:
   intl: 0.18.1
   line_icons: ^2.0.3
   lottie: ^2.6.0
-  neon_circular_timer: ^0.0.7
-  pedometer: ^4.0.1
   permission_handler: ^11.0.0
   shared_preferences: ^2.2.1
 
 dev_dependencies:
   build_runner: ^2.4.6
+  change_app_package_name: ^1.1.0
   flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_test:
